fix(css): use height 100vh to fix view on mobile

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  height: 100dvh;
+  height: 100vh;
   width: 100%;
   object-fit: cover;
   object-position: top;
